--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "adm-zip": "^0.5.9",
         "eventemitter2": "^5.0.1",
         "prettify-xml": "^1.2.0",
-        "undici": "6.13.0",
+        "undici": "^6.21.3",
         "ws": "^8.18.0",
         "xml2js": "^0.5.0",
         "zod": "^3.24.3"
